# monoone

./: .bazelignore  .gitignore  .pnp.cjs  .yarnrc.yml  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  buf.work.yaml  buf_deps.bzl  deps.bzl  go.mod  go.sum  package.json
apiserver/: BUILD.bazel  main.go  main_test.go
apiserver/internal/friends/: BUILD.bazel  server.go
gateway/: BUILD.bazel  main.go
magefiles/: bazel.go  buf.go  go.go  magefile.go  run.go  utils.go
protobufs/: buf.gen.yaml
protobufs/conversations/v1/: BUILD.bazel  conversation.proto  conversations_service.proto
protobufs/friends/v1/: BUILD.bazel  api.proto  friends_service.proto
protobufs/v1/: BUILD.bazel  api.proto
