load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")

gazelle_binary(
    name = "gazelle-buf",
    languages = [
        # Loads the native proto extension
        "@bazel_gazelle//language/proto:go_default_library",
        # Loads the Buf extension
        "@rules_buf//gazelle/buf:buf",
        # NOTE: This needs to be loaded after the proto language
    ],
)

# We need this since the default generated @buf_deps//google/api:api_proto dependency just does not exist
# it somehow is actually called visibility_proto.
# gazelle:resolve_regexp proto proto google/api/.*\.proto @buf_deps//google/api:visibility_proto
gazelle(
    name = "gazelle-proto",
    gazelle = ":gazelle-buf",
)

# gazelle:prefix github.com/rose-m/monoone
# gazelle:go_generate_proto false
gazelle(
    name = "gazelle",
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "--from_file=protobufs/buf.yaml",
        "-to_macro=buf_deps.bzl%buf_deps",
        "-prune",
    ],
    command = "update-repos",
    gazelle = ":gazelle-buf",
)
