"""
This is the root module for the whole monorepo.
"""

module(
    name = "monorepo",
    version = "1.0",
)

bazel_dep(name = "rules_go", version = "0.44.2")
bazel_dep(name = "gazelle", version = "0.35.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_google_uuid",
    "com_github_magefile_mage",
    "com_github_stretchr_testify",
)
