load("@rules_buf//buf:defs.bzl", "buf_lint_test")
load("@rules_proto//proto:defs.bzl", "proto_library")

buf_lint_test(
    name = "friends_v1_proto_lint",
    config = "//protobufs:buf.yaml",
    targets = [":friends_v1_proto"],
)

proto_library(
    name = "friends_v1_proto",
    srcs = ["friends_service.proto"],
    visibility = ["//visibility:public"],
    deps = ["@buf_deps//google/api:visibility_proto"],
)
